[gd_scene load_steps=52 format=3 uid="uid://beepnscn0oyw6"]

[ext_resource type="Script" uid="uid://c8kah0oky6xef" path="res://Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" uid="uid://c8kjjfgox4cmf" path="res://Assets/Enemy/goblin.png" id="2_287tu"]
[ext_resource type="Texture2D" uid="uid://dlo1k2f3uj6in" path="res://Assets/Enemy/goblinsword.png" id="2_afpow"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ve8xs"]
atlas = ExtResource("2_afpow")
region = Rect2(645, 0, 59, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0iv8"]
atlas = ExtResource("2_afpow")
region = Rect2(586, 0, 59, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1gwg"]
atlas = ExtResource("2_afpow")
region = Rect2(527, 0, 59, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mxp7"]
atlas = ExtResource("2_afpow")
region = Rect2(638, 192, 59, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a56t"]
atlas = ExtResource("2_afpow")
region = Rect2(579, 192, 59, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6sir"]
atlas = ExtResource("2_afpow")
region = Rect2(520, 192, 59, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ej4m"]
atlas = ExtResource("2_afpow")
region = Rect2(645, 64, 59, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwheg"]
atlas = ExtResource("2_afpow")
region = Rect2(586, 64, 59, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iol0x"]
atlas = ExtResource("2_afpow")
region = Rect2(527, 64, 59, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofqcr"]
atlas = ExtResource("2_afpow")
region = Rect2(645, 128, 59, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nus6a"]
atlas = ExtResource("2_afpow")
region = Rect2(586, 128, 59, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_imgxb"]
atlas = ExtResource("2_afpow")
region = Rect2(527, 128, 59, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqxsh"]
atlas = ExtResource("2_287tu")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0whn2"]
atlas = ExtResource("2_287tu")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx1xr"]
atlas = ExtResource("2_287tu")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n85mp"]
atlas = ExtResource("2_287tu")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxecp"]
atlas = ExtResource("2_287tu")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_afpow"]
atlas = ExtResource("2_287tu")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jaer"]
atlas = ExtResource("2_287tu")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyrvc"]
atlas = ExtResource("2_287tu")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
atlas = ExtResource("2_afpow")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("2_afpow")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("2_afpow")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("2_afpow")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_auwsv"]
atlas = ExtResource("2_afpow")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uf12"]
atlas = ExtResource("2_afpow")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_po0sg"]
atlas = ExtResource("2_afpow")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_haro7"]
atlas = ExtResource("2_afpow")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_56vhr"]
atlas = ExtResource("2_afpow")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta2yt"]
atlas = ExtResource("2_afpow")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4x7e"]
atlas = ExtResource("2_afpow")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt4ob"]
atlas = ExtResource("2_afpow")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgeoe"]
atlas = ExtResource("2_afpow")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk7xo"]
atlas = ExtResource("2_afpow")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_scl1n"]
atlas = ExtResource("2_afpow")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhkrs"]
atlas = ExtResource("2_afpow")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xdhn"]
atlas = ExtResource("2_afpow")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jyny"]
atlas = ExtResource("2_afpow")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh8xy"]
atlas = ExtResource("2_afpow")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjcj6"]
atlas = ExtResource("2_afpow")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ycey"]
atlas = ExtResource("2_afpow")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cim4"]
atlas = ExtResource("2_afpow")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x82w"]
atlas = ExtResource("2_afpow")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iatxd"]
atlas = ExtResource("2_afpow")
region = Rect2(320, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qqxsh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve8xs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0iv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1gwg")
}],
"loop": true,
"name": &"Attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mxp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a56t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6sir")
}],
"loop": true,
"name": &"Attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ej4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwheg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iol0x")
}],
"loop": true,
"name": &"Attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofqcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nus6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imgxb")
}],
"loop": true,
"name": &"Attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqxsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0whn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx1xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n85mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxecp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afpow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jaer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyrvc")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uf12")
}],
"loop": true,
"name": &"Walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_po0sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haro7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56vhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta2yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4x7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt4ob")
}],
"loop": true,
"name": &"Walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgeoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk7xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scl1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhkrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xdhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jyny")
}],
"loop": true,
"name": &"Walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh8xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjcj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ycey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cim4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x82w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iatxd")
}],
"loop": true,
"name": &"Walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1f0kj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1f0kj"]
radius = 180.225

[sub_resource type="CircleShape2D" id="CircleShape2D_afpow"]
radius = 27.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_1f0kj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_qqxsh")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_1f0kj")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0, -20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1f0kj")
debug_color = Color(0.614368, 0.535107, 0.138033, 0.231373)

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -20)
collision_mask = 3

[node name="LostSightTimer" type="Timer" parent="."]
wait_time = 1.731
one_shot = true

[node name="Healthbar" type="ProgressBar" parent="."]
modulate = Color(0.984314, 0, 0, 0.52549)
self_modulate = Color(1, 0, 0, 1)
z_index = 6
offset_left = -23.0
offset_top = -58.0
offset_right = 26.0
offset_bottom = -51.0
theme_override_font_sizes/font_size = 3
max_value = 5.0
step = 1.0
show_percentage = false

[node name="AttackHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(0, -19)
shape = SubResource("CircleShape2D_afpow")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="LostSightTimer" to="." method="_on_lost_sight_timer_timeout"]
[connection signal="body_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="body_shape_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_body_shape_entered"]
